<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/create_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="createNewPatient"
        android:text="@string/create_patient"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/select_a_patient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="30dp" />

    <Button
        android:onClick="viewPatientsList"
        android:id="@+id/select_a_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_a_patient"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sendToDB"
        android:onClick="sendPatients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Отправить данные в БД"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_a_patient"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/exit"
        android:onClick="exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_a_patient"
        android:layout_marginTop="30dp" />

<!--    <TextView-->
<!--        android:id="@+id/idPatient"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/exit"-->
<!--        android:layout_marginTop="30dp"-->
<!--        android:textSize="24dp"-->
<!--        android:text="Ghbdnt"-->
<!--        />-->

</androidx.constraintlayout.widget.ConstraintLayout>